it('simple', () => {
  expect(10).toMatchSnapshot()
  expect(null).toMatchSnapshot()
  expect().toMatchSnapshot()
  expect([]).toMatchSnapshot()
  expect(/xx/).toMatchSnapshot()
  expect(Infinity).toMatchSnapshot()
  expect(false).toMatchSnapshot()
  expect(true).toMatchSnapshot()
  expect({}).toMatchSnapshot()
})

it('complex', () => {
  expect([10]).toMatchSnapshot()
  expect([{ a: 10 }]).toMatchSnapshot()
  expect({ a: 10 }).toMatchSnapshot()
  expect({ a: 10, b: 20 }).toMatchSnapshot()
  expect(Buffer.from('')).toMatchSnapshot()
})

// repeat test name
it('simple', () => {
  expect(/hello/).toMatchSnapshot()
  expect(true).toMatchSnapshot()
  expect(NaN).toMatchSnapshot()
  expect({}).toMatchSnapshot()
  expect(42).toMatchSnapshot()
  expect([]).toMatchSnapshot()
  expect(-Infinity).toMatchSnapshot()
})

it('mixed', () => {
  expect(true).toMatchSnapshot()
  expect([1, 2, 3]).toMatchSnapshot()
  expect({ foo: 'bar' }).toMatchSnapshot()
  expect(43).toMatchSnapshot()
  expect({}).toMatchSnapshot()
  expect([]).toMatchSnapshot()
})

// repeat test name
it('mixed', () => {
  expect([5, 4, 3]).toMatchSnapshot()
  expect([]).toMatchSnapshot()
  expect(false).toMatchSnapshot()
  expect(41).toMatchSnapshot()
  expect({ bar: 'buz' }).toMatchSnapshot()
  expect({}).toMatchSnapshot()
})

it('simple inline', () => {
  expect(42).toMatchInlineSnapshot(`42`)
  expect({}).toMatchInlineSnapshot(`{}`)
})

const TEST_ONE = { a: 20, d: Buffer.from('foo'), b: [1, 2, 'bar', 5], e: { foo: 'bar' } }
// eslint-disable-next-line no-sparse-arrays
const TEST_TWO = { ['__proto__']: [], b: [1, 2, , , 5], e: { foo: 'bar' }, f: -Infinity }
const TEST_THREE = [new Error('?!'), new TypeError('bar'), new Uint16Array([4, 2, 65_123]), null]

// Test names repeat on a purpose!

it('test A', () => {
  expect(TEST_ONE).toMatchSnapshot()
})

it('test B', () => {
  expect(TEST_TWO).toMatchSnapshot()
})

it('test B', () => {
  expect(TEST_THREE).toMatchSnapshot()
})

// Repeat name
it('test B', () => {
  expect({ x: 1337 }).toMatchSnapshot()
})

describe('nested test', () => {
  it('test A', () => {
    expect(TEST_TWO).toMatchSnapshot()
  })

  it('test A', () => {
    expect(TEST_THREE).toMatchSnapshot()
  })

  it('nested test one', () => {
    expect(TEST_ONE).toMatchSnapshot()
  })
})

it('test one, inline', () => {
  // eslint-disable-next-line unicorn/template-indent
  expect(TEST_ONE).toMatchInlineSnapshot(`
{
  "a": 20,
  "b": [
    1,
    2,
    "bar",
    5,
  ],
  "d": {
    "data": [
      102,
      111,
      111,
    ],
    "type": "Buffer",
  },
  "e": {
    "foo": "bar",
  },
}
`)
})

it('errors', () => {
  expect(() => {
    throw new TypeError('Whoops\nI\nFailed')
  }).toThrowErrorMatchingSnapshot()

  expect(() => {
    throw new RangeError('Out of something')
  }).toThrowErrorMatchingInlineSnapshot('"Out of something"')
})

it('async errors', async () => {
  await expect(Promise.reject(new TypeError('slow but nah'))).rejects.toThrowErrorMatchingSnapshot()
  await expect(Promise.resolve(new Error('ok'))).resolves.toThrowErrorMatchingInlineSnapshot('"ok"')
})
